@@ -1,13 +1,14 @@
 # docker-geoserver
 
 A simple docker container that runs Geoserver influenced by this docker
-recipe: https://github.com/eliotjordan/docker-geoserver/blob/master/Dockerfile
-and is a modified version of the container kartoza/geoserver by Tim Sutton (tim@kartoza.com)
+recipe: https://github.com/kartoza/docker-geoserver by Tim Sutton
 
-This container is built with:
-* Tomcat8
-* GeoServer 2.8.2
-* GeoServer Plugins:  Printing; CSS;
+This container is configured to build with:
+* Tomcat8.5
+* Openjdk 8 
+* GeoServer 2.8.3
+* GeoServer Plugins: Any plugins downloaded to /resources/plugins
+
 
 **Note:** We recommend using ``apt-cacher-ng`` to speed up package fetching -
 you should configure the host for it in the provided 71-apt-cacher-ng file.
@@ -17,13 +18,13 @@ you should configure the host for it in the provided 71-apt-cacher-ng file.
 The image can be downloaded from our image on dockerhub:
 
 
-```
+```shell
 docker pull thinkwhere/geoserver
 ```
 
 To build the image yourself do:
 
-```
+```shell
 docker build -t thinkwhere/geoserver git://github.com/thinkwhere/geoserver-docker
 ```
 
@@ -32,22 +33,59 @@ clone this repo locally first and modify the contents of 71-apt-cacher-ng to
 match your cacher host. Then build using a local url instead of directly from
 github.
 
-```
+```shell
 git clone git://github.com/thinkwhere/geoserver-docker
 ```
 Now edit ``71-apt-cacher-ng`` 
 
+## Options
+
+### Geoserver Plugins
+
+To build the GeoServer image with plugins (Control Flow, Monitor, Inspire, etc), 
+download the plugin zip files from the GeoServer download page and put them in 
+`resources/plugins` before building.  You should make sure these match the version of
+GeoServer you are installing.
+GeoServer version is controlled by the variable in Dockerfile, or download the WAR bundle
+for the version you want to `resources/geoserver.zip` before building.
+
+### Tomcat Extras
+
+Tomcat is bundled with extras including docs, examples, etc.  If you don't need these, set
+the `TOMCAT_EXTRAS` build-arg to `false` when building the image.  (This is the default in 
+build.sh.)
+
+```shell
+docker build --build-arg TOMCAT_EXTRAS=false -t thinkwhere/geoserver-docker .
+```
 
 ## Run
 
-It is recommended that Geoserver is run with an external geoserver_data directory mapped as a docker volume
-allowing the configuration to be persisted or shared with other instances. To create a running container 
+### External geoserver_data directory
+You probably want to run Geoserver with an external geoserver_data directory mapped as a docker volume.
+This allows the configuration to be persisted or shared with other instances. To create a running container 
 with an external volume do:
 
-```
+```shell
 mkdir -p ~/geoserver_data
 docker run \
-	--name=geoserver_8085 \
+	--name=geoserver \
+	-p 8080:8080 \
+	-d \
+	-v $HOME/geoserver_data:/opt/geoserver/data_dir \
+	-t thinkwhere/geoserver
+```
+
+### Running multiple instances on the same machine
+For installations with multiple containers on the same host, map port 8080 to a different port for each
+instance.  It is recommended that the instance name contains the mapped port no for ease of reference.
+Each instance should also have its own log file, specified by passing in the `GEOSERVER_LOG_LOCATION'
+variable as illustrated in the example below.
+
+```shell
+mkdir -p ~/geoserver_data
+docker run \
+	--name=geoserver \
 	-p 8085:8080 \
 	-d \
 	-v $HOME/geoserver_data:/opt/geoserver/data_dir \
@@ -55,8 +93,23 @@ docker run \
 	-t thinkwhere/geoserver
 ```
 
-For installations with multiple containers on the same machine, map port 8080 to a different port for each
-instance.  It is recommended that the instance name contains the mapped port no for ease of reference.
+### Setting Tomcat properties
+
+To set Tomcat properties such as maximum heap memory size, create a `setenv.sh` 
+file such as:
+
+```shell
+JAVA_OPTS="$JAVA_OPTS -Xmx1024M"
+JAVA_OPTS="$JAVA_OPTS -Djava.awt.headless=true -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled"
+```
+
+Then pass the `setenv.sh` file as a volume at `/usr/local/tomcat/bin/setenv.sh` when running:
+
+```shell
+docker run -d \
+    -v $HOME/tomcat/setenv.sh:/usr/local/tomcat/bin/setenv.sh \
+    thinkwhere/geserver
+```
 
 This repository contains a ``run.sh`` script for your convenience.
 
